--- a/404.html
+++ b/404.html
@@ -17,11 +17,11 @@
 <meta property="twitter:title" content="ML Series - Wayanad House">
 <meta property="twitter:description" content="ML Series is an initiative by the Wayanad House">
 <meta property="twitter:image" content="https://wayanadiitm.github.io/ml/assets/images/favicon.png">
-<link rel="shortcut icon" href="assets/images/favicon.png" type="image/png"/>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/animate.css" />
-    <link rel="stylesheet" href="assets/css/lineicons.css" />
-    <link rel="stylesheet" href="assets/css/ud-styles.css" />
+<link rel="shortcut icon" href="/ml/assets/images/favicon.png" type="image/png"/>
+    <link rel="stylesheet" href="/ml/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/ml/assets/css/animate.css" />
+    <link rel="stylesheet" href="/ml/assets/css/lineicons.css" />
+    <link rel="stylesheet" href="/ml/assets/css/ud-styles.css" />
   </head>
   <body>
     
@@ -52,15 +52,10 @@
 
     
 
-    <!-- ====== Back To Top Start ====== -->
-    <a href="javascript:void(0)" class="back-to-top">
-      <i class="lni lni-chevron-up"> </i>
-    </a>
-    <!-- ====== Back To Top End ====== -->
 
     <!-- ====== All Javascript Files ====== -->
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/ml/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/ml/assets/js/wow.min.js"></script>
+    <script src="/ml/assets/js/main.js"></script>
   </body>
 </html>
