--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-section-title mx-auto text-center">
-              <span>Testimonials</span>
+              <span>Feedbacks</span>
               <h2>What our Participants Say</h2>
               <p>
                 There are many variations of passages of Lorem Ipsum available
@@ -842,7 +842,7 @@
             <div class="col-md-4">
               <p class="ud-footer-bottom-right">
                 Template from
-                <a href="https://uideck.com" rel="nofollow" target="_blank">UIdeck</a>
+                <a href="https://uideck.com" rel="nofollow" target="_blank">UIdeck</a>, Icon credits: Flaticon
               </p>
             </div>
           </div>
