--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <i class="lni lni-gift"></i>
               </div>
               <div class="ud-feature-content">
-                <h3 class="ud-feature-title">Free and Open-Source</h3>
+                <h3 class="ud-feature-title">Problem solving excellence</h3>
                 <p class="ud-feature-desc">
                   Lorem Ipsum is simply dummy text of the printing and industry.
                 </p>
@@ -155,7 +155,7 @@
                 <i class="lni lni-move"></i>
               </div>
               <div class="ud-feature-content">
-                <h3 class="ud-feature-title">Multipurpose Template</h3>
+                <h3 class="ud-feature-title">Hands-On Experience</h3>
                 <p class="ud-feature-desc">
                   Lorem Ipsum is simply dummy text of the printing and industry.
                 </p>
@@ -171,7 +171,7 @@
                 <i class="lni lni-layout"></i>
               </div>
               <div class="ud-feature-content">
-                <h3 class="ud-feature-title">High-quality Design</h3>
+                <h3 class="ud-feature-title">Knowledge enhancement</h3>
                 <p class="ud-feature-desc">
                   Lorem Ipsum is simply dummy text of the printing and industry.
                 </p>
@@ -187,7 +187,7 @@
                 <i class="lni lni-layers"></i>
               </div>
               <div class="ud-feature-content">
-                <h3 class="ud-feature-title">All Essential Elements</h3>
+                <h3 class="ud-feature-title">Thriving Community</h3>
                 <p class="ud-feature-desc">
                   Lorem Ipsum is simply dummy text of the printing and industry.
                 </p>
