--- a/index.html
+++ b/index.html
@@ -409,8 +409,7 @@
               <span>Feedbacks</span>
               <h2>What our Participants Say</h2>
               <p>
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+                Hardly a few are put up here, collected across LogicLooM, ML Challenge and counting ...
               </p>
             </div>
           </div>
@@ -431,8 +430,9 @@
               </div>
               <div class="ud-testimonial-content">
                 <p>
-                  “Our members are so impressed. It's intuitive. It's clean.
-                  It's distraction free. If you're building a community.
+                  “Attempted many technical events in various editions of Paradox. LogicLooM tops them all.
+                Good support, amazing coordination and overall an excellent event. Kudos to the organizers. Will
+                be looking forward to future events.
                 </p>
               </div>
               <div class="ud-testimonial-info">
@@ -443,8 +443,8 @@
                   />
                 </div>
                 <div class="ud-testimonial-meta">
-                  <h4>Sabo Masties</h4>
-                  <p>Founder @UIdeck</p>
+                  <h4>Gobalakrishnan V</h4>
+                  <p>Achiever @ LogicLooM (1st edition - Margazhi)</p>
                 </div>
               </div>
             </div>
@@ -463,8 +463,9 @@
               </div>
               <div class="ud-testimonial-content">
                 <p>
-                  “Our members are so impressed. It's intuitive. It's clean.
-                  It's distraction free. If you're building a community.
+                  “Warmup questions were like jalebi:) They wrapped around twisting it multiple times. Round2 was hard! We scratched our head for 2.5 hours
+                and did what we could. In this process, we definitely learnt a lot. Thanks to LogicLooM team
+                for organizing such a great event. Had too much fun and learning.
                 </p>
               </div>
               <div class="ud-testimonial-info">
@@ -475,8 +476,8 @@
                   />
                 </div>
                 <div class="ud-testimonial-meta">
-                  <h4>Margin Gesmu</h4>
-                  <p>Founder @Lineicons</p>
+                  <h4>Siddharth</h4>
+                  <p>Achiever @ LogicLooM Margazhi, May-Jun'24 edition, ML Challenge 1.0</p>
                 </div>
               </div>
             </div>
@@ -495,8 +496,9 @@
               </div>
               <div class="ud-testimonial-content">
                 <p>
-                  “Our members are so impressed. It's intuitive. It's clean.
-                  It's distraction free. If you're building a community.
+                  “I realized that my problem solving skills are below par and I should work on them. The contest
+                motivated and showed a mirror to me. I hope to participate in LogicLooM again with an improved
+                version of myself. Thanks a lot to the organizers!
                 </p>
               </div>
               <div class="ud-testimonial-info">
@@ -507,8 +509,8 @@
                   />
                 </div>
                 <div class="ud-testimonial-meta">
-                  <h4>William Smith</h4>
-                  <p>Founder @GrayGrids</p>
+                  <h4>Niraj</h4>
+                  <p>Participant @ LogicLooM</p>
                 </div>
               </div>
             </div>
