--- a/index.html
+++ b/index.html
@@ -690,8 +690,8 @@
                 />
               </div>
               <div class="ud-team-info">
-                <h5>Jackie Sanders</h5>
-                <h6>Content Writer</h6>
+                <h5>Goutham</h5>
+                <h6></h6>
               </div>
               <ul class="ud-team-socials">
                 <li>
@@ -720,7 +720,7 @@
     <!-- ====== Contact Start ====== -->
     <section id="contact" class="ud-contact">
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row justify-content-center align-items-center">
           <div class="col-xl-8 col-lg-7">
             <div class="ud-contact-content-wrapper">
               <div class="ud-contact-title">
