--- a/index.html
+++ b/index.html
@@ -515,6 +515,42 @@
               </div>
             </div>
           </div>
+<div class="col-lg-4 col-md-6">
+            <div
+              class="ud-single-testimonial wow fadeInUp"
+              data-wow-delay=".2s"
+            >
+              <div class="ud-testimonial-ratings">
+                <i class="lni lni-star-filled"></i>
+                <i class="lni lni-star-filled"></i>
+                <i class="lni lni-star-filled"></i>
+                <i class="lni lni-star-filled"></i>
+                <i class="lni lni-star-filled"></i>
+              </div>
+              <div class="ud-testimonial-content">
+                <p>
+                  “I realized that my problem solving skills are below par and I should work on them. The contest
+                motivated and showed a mirror to me. I hope to participate in LogicLooM again with an improved
+                version of myself. Thanks a lot to the organizers!
+                </p>
+              </div>
+              <div class="ud-testimonial-info">
+                <div class="ud-testimonial-image">
+                  <img
+                    src="assets/images/testimonials/author-03.png"
+                    alt="author"
+                  />
+                </div>
+                <div class="ud-testimonial-meta">
+                  <h4>Niraj</h4>
+                  <p>Participant @ LogicLooM</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          
         </div>
         <div class="row">
           <div class="col-lg-12">
