--- a/index.html
+++ b/index.html
@@ -816,6 +816,16 @@
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
+                    <a href="https://wayanad.iitmbs.org" target="_blank">
+                      <i class="lni lni-website"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe" target="_blank">
+                      <i class="lni lni-whatsapp"></i>
+                    </a>
+                  </li>
+                  <li>
                     <a href="https://www.instagram.com/wayanad_iitm/" target="_blank">
                       <i class="lni lni-instagram-filled"></i>
                     </a>
