--- a/index.html
+++ b/index.html
@@ -287,15 +287,19 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>How to download icons from Lineicons?</span>
+                  <span>I'm a fresher and not aware of ML. Should I participate and join this community?</span>
                 </button>
                 <div id="collapseTwo" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.
+                    You need not worry if you're just starting out and don't have a technical or coding background. We’re providing you with
+                    easy-to-understand resources and a detailed roadmap to help you get familiar with Python first. For anyone following this
+                    roadmap dedicatedly, these will be the pre-requisites to get started with ML basics. Some mentoring sessions will be taken as well.
+                    Honestly, we don't expect you to jump into complex libraries, train and fine-tune transformers or surpass the benchmark scores.
+                    We understand that it's not possible since you're completely new to this and this requires ML mastery to understand the nuances in the dataset,
+                    what models will best suit the task etc.<br>
+                    <b>>Our goal isn’t for you to master these intricate aspects right away, but rather to gain a solid understanding of the basics and how ML works.</b><br>
+                    As students of DS, you eventually need to dive into ML and this will be a fantastic hands-on opportunity & learning experience. Give it a try.
+                    Learn, join our sessions and enjoy the events :)
                   </div>
                 </div>
               </div>
@@ -576,8 +580,6 @@
               <span>Our Team</span>
               <h2>Meet The Team</h2>
               <p>
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
               </p>
             </div>
           </div>
@@ -748,6 +750,96 @@
               </ul>
             </div>
           </div>
+<div class="col-xl-3 col-lg-3 col-sm-6">
+            <div class="ud-single-team wow fadeInUp" data-wow-delay=".15s">
+              <div class="ud-team-image-wrapper">
+                <div class="ud-team-image">
+                  <img src="assets/images/team/team-02.png" alt="team" />
+                </div>
+
+                <img
+                  src="assets/images/team/dotted-shape.svg"
+                  alt="shape"
+                  class="shape shape-1"
+                />
+                <img
+                  src="assets/images/team/shape-2.svg"
+                  alt="shape"
+                  class="shape shape-2"
+                />
+              </div>
+              <div class="ud-team-info">
+                <h5>Shambhavi</h5>
+                <h6></h6>
+              </div>
+              <ul class="ud-team-socials">
+                <li>
+                  <a href="https://twitter.com/MusharofChy">
+                    <i class="lni lni-facebook-filled"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/MusharofChy">
+                    <i class="lni lni-twitter-filled"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/MusharofChy">
+                    <i class="lni lni-instagram-filled"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+<div class="col-xl-3 col-lg-3 col-sm-6">
+            <div class="ud-single-team wow fadeInUp" data-wow-delay=".15s">
+              <div class="ud-team-image-wrapper">
+                <div class="ud-team-image">
+                  <img src="assets/images/team/team-02.png" alt="team" />
+                </div>
+
+                <img
+                  src="assets/images/team/dotted-shape.svg"
+                  alt="shape"
+                  class="shape shape-1"
+                />
+                <img
+                  src="assets/images/team/shape-2.svg"
+                  alt="shape"
+                  class="shape shape-2"
+                />
+              </div>
+              <div class="ud-team-info">
+                <h5>Rohit</h5>
+                <h6></h6>
+              </div>
+              <ul class="ud-team-socials">
+                <li>
+                  <a href="https://twitter.com/MusharofChy">
+                    <i class="lni lni-facebook-filled"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/MusharofChy">
+                    <i class="lni lni-twitter-filled"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/MusharofChy">
+                    <i class="lni lni-instagram-filled"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+
+
+
+
+
+
+          
         </div>
       </div>
     </section>
@@ -817,7 +909,7 @@
                 <ul class="ud-widget-socials">
                   <li>
                     <a href="https://wayanad.iitmbs.org" target="_blank">
-                      <i class="lni lni-website"></i>
+                      <i class="lni lni-website-alt"></i>
                     </a>
                   </li>
                   <li>
@@ -840,11 +932,11 @@
                       <i class="lni lni-youtube"></i>
                     </a>
                   </li>
-                  <li>
+                  <!--<li>
                     <a href="https://twitter.com/wayanad_iitm" target="_blank">
                       <i class="lni lni-twitter-filled"></i>
                     </a>
-                  </li>
+                  </li>-->
                 </ul>
               </div>
             </div>
