--- a/index.html
+++ b/index.html
@@ -579,8 +579,7 @@
             <div class="ud-section-title mx-auto text-center">
               <span>Our Team</span>
               <h2>Meet The Team</h2>
-              <p>
-              </p>
+              <p>"Permanent Hoon Sir :D"</p>
             </div>
           </div>
         </div>
