--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
               <span>Why?</span>
               <h2>Lets make "DATA <font color="red">की</font> Science" more FUN!</h2>
               <p>
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+                We launched our initiative in Wayanad in October 2023, and it has been met with overwhelming love, success, and
+                positive feedback. We are excited to see how it continues to thrive! We've conducted 2 mega-events at Paradox Technicals that became one of the celebrated events
+                among students with more than 1000+ unique participants combined and Profs. from IITGN, IITR and IITM course instructors being a part of it.
               </p>
             </div>
           </div>
