--- a/index.html
+++ b/index.html
@@ -909,12 +909,7 @@
                 <ul class="ud-widget-socials">
                   <li>
                     <a href="https://wayanad.iitmbs.org" target="_blank">
-                      <i class="lni lni-website-alt"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe" target="_blank">
-                      <i class="lni lni-whatsapp"></i>
+                      <i class="lni lni-google-alt"></i>
                     </a>
                   </li>
                   <li>
@@ -930,6 +925,11 @@
                   <li>
                     <a href="https://www.youtube.com/@wayanadhouseiitm" target="_blank">
                       <i class="lni lni-youtube"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe" target="_blank">
+                      <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
                   <!--<li>
