--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
                 <ul class="ud-widget-socials">
                   <li>
                     <a href="https://wayanad.iitmbs.org" target="_blank">
-                      <i class="lni lni-google-alt"></i>
+                      <i class="lni lni-google"></i>
                     </a>
                   </li>
                   <li>
