--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <link rel="stylesheet" href="assets/css/animate.css" />
 <link rel="stylesheet" href="assets/css/lineicons.css" />
 <link rel="stylesheet" href="assets/css/ud-styles.css" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
   <body>
     <!-- ====== Header Start ====== -->
@@ -402,170 +404,107 @@
 
     <!-- ====== Testimonials Start ====== -->
     <section id="testimonials" class="ud-testimonials">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="ud-section-title mx-auto text-center">
-              <span>Feedbacks</span>
-              <h2>What our Participants Say</h2>
-              <p>
-                Hardly a few are put up here, collected across LogicLooM, ML Challenge and counting ...
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div
-              class="ud-single-testimonial wow fadeInUp"
-              data-wow-delay=".1s"
-            >
-              <div class="ud-testimonial-ratings">
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-              </div>
-              <div class="ud-testimonial-content">
-                <p>
-                  “Attempted many technical events in various editions of Paradox. LogicLooM tops them all.
-                Good support, amazing coordination and overall an excellent event. Kudos to the organizers. Will
-                be looking forward to future events.
-                </p>
-              </div>
-              <div class="ud-testimonial-info">
-                <div class="ud-testimonial-image">
-                  <img
-                    src="assets/images/testimonials/author-01.png"
-                    alt="author"
-                  />
-                </div>
-                <div class="ud-testimonial-meta">
-                  <h4>Gobalakrishnan V</h4>
-                  <p>Achiever @ LogicLooM (1st edition - Margazhi)</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div
-              class="ud-single-testimonial wow fadeInUp"
-              data-wow-delay=".15s"
-            >
-              <div class="ud-testimonial-ratings">
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-              </div>
-              <div class="ud-testimonial-content">
-                <p>
-                  “Warmup questions were like jalebi:) They wrapped around twisting it multiple times. Round2 was hard! We scratched our head for 2.5 hours
-                and did what we could. In this process, we definitely learnt a lot. Thanks to LogicLooM team
-                for organizing such a great event. Had too much fun and learning.
-                </p>
-              </div>
-              <div class="ud-testimonial-info">
-                <div class="ud-testimonial-image">
-                  <img
-                    src="assets/images/testimonials/author-02.png"
-                    alt="author"
-                  />
-                </div>
-                <div class="ud-testimonial-meta">
-                  <h4>Siddharth</h4>
-                  <p>Achiever @ LogicLooM Margazhi, May-Jun'24 edition, ML Challenge 1.0</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div
-              class="ud-single-testimonial wow fadeInUp"
-              data-wow-delay=".2s"
-            >
-              <div class="ud-testimonial-ratings">
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-              </div>
-              <div class="ud-testimonial-content">
-                <p>
-                  “I realized that my problem solving skills are below par and I should work on them. The contest
-                motivated and showed a mirror to me. I hope to participate in LogicLooM again with an improved
-                version of myself. Thanks a lot to the organizers!
-                </p>
-              </div>
-              <div class="ud-testimonial-info">
-                <div class="ud-testimonial-image">
-                  <img
-                    src="assets/images/testimonials/author-03.png"
-                    alt="author"
-                  />
-                </div>
-                <div class="ud-testimonial-meta">
-                  <h4>Niraj</h4>
-                  <p>Participant @ LogicLooM</p>
-                </div>
-              </div>
-            </div>
-          </div>
-<div class="col-lg-4 col-md-6">
-            <div
-              class="ud-single-testimonial wow fadeInUp"
-              data-wow-delay=".2s"
-            >
-              <div class="ud-testimonial-ratings">
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-                <i class="lni lni-star-filled"></i>
-              </div>
-              <div class="ud-testimonial-content">
-                <p>
-                  “I realized that my problem solving skills are below par and I should work on them. The contest
-                motivated and showed a mirror to me. I hope to participate in LogicLooM again with an improved
-                version of myself. Thanks a lot to the organizers!
-                </p>
-              </div>
-              <div class="ud-testimonial-info">
-                <div class="ud-testimonial-image">
-                  <img
-                    src="assets/images/testimonials/author-03.png"
-                    alt="author"
-                  />
-                </div>
-                <div class="ud-testimonial-meta">
-                  <h4>Niraj</h4>
-                  <p>Participant @ LogicLooM</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-          
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="ud-brands wow fadeInUp" data-wow-delay=".2s">
-              <div class="ud-title">
-                <h6>Trusted by</h6>
-              </div>
-              <div class="ud-brands-logo">
-              </div>
-            </div>
-          </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="ud-section-title mx-auto text-center">
+          <span>Feedbacks</span>
+          <h2>What our Participants Say</h2>
+          <p>
+            Hardly a few are put up here, collected across LogicLooM, ML Challenge and counting ...
+          </p>
         </div>
       </div>
-    </section>
-    <!-- ====== Testimonials End ====== -->
+    </div>
+
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <!-- Testimonial 1 -->
+          <div class="ud-single-testimonial">
+            <div class="ud-testimonial-ratings">
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+            </div>
+            <div class="ud-testimonial-content">
+              <p>“Attempted many technical events in various editions of Paradox. LogicLooM tops them all. Good support, amazing coordination and overall an excellent event. Kudos to the organizers. Will be looking forward to future events.”</p>
+            </div>
+            <div class="ud-testimonial-info">
+              <div class="ud-testimonial-image">
+                <img src="assets/images/testimonials/author-01.png" alt="author" />
+              </div>
+              <div class="ud-testimonial-meta">
+                <h4>Gobalakrishnan V</h4>
+                <p>Achiever @ LogicLooM</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="swiper-slide">
+          <!-- Testimonial 2 -->
+          <div class="ud-single-testimonial">
+            <div class="ud-testimonial-ratings">
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+            </div>
+            <div class="ud-testimonial-content">
+              <p>“Warmup questions were like jalebi:) They wrapped around twisting it multiple times. Round2 was hard! We scratched our head for 2.5 hours and did what we could. In this process, we definitely learnt a lot. Thanks to LogicLooM team for organizing such a great event. Had too much fun and learning.”</p>
+            </div>
+            <div class="ud-testimonial-info">
+              <div class="ud-testimonial-image">
+                <img src="assets/images/testimonials/author-02.png" alt="author" />
+              </div>
+              <div class="ud-testimonial-meta">
+                <h4>Siddharth</h4>
+                <p>Achiever @ LogicLooM</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="swiper-slide">
+          <!-- Testimonial 3 -->
+          <div class="ud-single-testimonial">
+            <div class="ud-testimonial-ratings">
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+              <i class="lni lni-star-filled"></i>
+            </div>
+            <div class="ud-testimonial-content">
+              <p>“I realized that my problem solving skills are below par and I should work on them. The contest motivated and showed a mirror to me. I hope to participate in LogicLooM again with an improved version of myself. Thanks a lot to the organizers!”</p>
+            </div>
+            <div class="ud-testimonial-info">
+              <div class="ud-testimonial-image">
+                <img src="assets/images/testimonials/author-03.png" alt="author" />
+              </div>
+              <div class="ud-testimonial-meta">
+                <h4>Niraj</h4>
+                <p>Participant @ LogicLooM</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Add more swiper-slide divs for additional testimonials -->
+      </div>
+      
+      <!-- Add Pagination if desired -->
+      <div class="swiper-pagination"></div>
+      <!-- Add Navigation if desired -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+    </div>
+  </div>
+</section>
+
 
     <!-- ====== Team Start ====== -->
     <section id="team" class="ud-team">
@@ -1039,5 +978,22 @@
 
       window.document.addEventListener("scroll", onScroll);
     </script>
+    <script>
+  const swiper = new Swiper('.swiper-container', {
+    loop: true,
+    autoplay: {
+      delay: 3000,
+      disableOnInteraction: false,
+    },
+    pagination: {
+      el: '.swiper-pagination',
+      clickable: true,
+    },
+    navigation: {
+      nextEl: '.swiper-button-next',
+      prevEl: '.swiper-button-prev',
+    },
+  });
+</script>
   </body>
 </html>
