--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
                   </div>
                   <div class="ud-info-meta">
                     <h5>Get in Touch</h5>
-                    <p>Wayanad House, IITM BS Program<br>wayanad-sec@ds.study.iitm.ac.in</p>
+                    <p>Wayanad House,<br>IITM BS Program</p>
                   </div>
                 </div>
                 <div class="ud-single-info">
