--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 <link rel="stylesheet" href="assets/css/ud-styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <style>
+ body {
+    overflow-x: hidden;
+}   
+  </style>
 </head>
   <body>
     <!-- ====== Header Start ====== -->
@@ -196,7 +201,7 @@
           <div class="ud-about-content-wrapper">
             <div class="ud-about-content">
               <span class="tag">About Us</span>
-              <h2>Heading!</h2>
+              <h2>Heading</h2>
               <p>
                 To be updated
               </p>
@@ -574,7 +579,7 @@
                 />
               </div>
               <div class="ud-team-info">
-                <h5>Sayan</h5>
+                <h5>Deepak</h5>
                 <h6></h6>
               </div>
               <ul class="ud-team-socials">
@@ -616,6 +621,47 @@
               </div>
               <div class="ud-team-info">
                 <h5>Advait</h5>
+                <h6></h6>
+              </div>
+              <ul class="ud-team-socials">
+                <li>
+                  <a href="https://twitter.com/MusharofChy">
+                    <i class="lni lni-facebook-filled"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/MusharofChy">
+                    <i class="lni lni-twitter-filled"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/MusharofChy">
+                    <i class="lni lni-instagram-filled"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-xl-3 col-lg-3 col-sm-6">
+            <div class="ud-single-team wow fadeInUp" data-wow-delay=".15s">
+              <div class="ud-team-image-wrapper">
+                <div class="ud-team-image">
+                  <img src="assets/images/team/team-02.png" alt="team" />
+                </div>
+
+                <img
+                  src="assets/images/team/dotted-shape.svg"
+                  alt="shape"
+                  class="shape shape-1"
+                />
+                <img
+                  src="assets/images/team/shape-2.svg"
+                  alt="shape"
+                  class="shape shape-2"
+                />
+              </div>
+              <div class="ud-team-info">
+                <h5>Sayan</h5>
                 <h6></h6>
               </div>
               <ul class="ud-team-socials">
