--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
 <link rel="stylesheet" href="assets/css/ud-styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <style>
- body {
-    overflow-x: hidden;
-}   
-  </style>
 </head>
   <body>
     <!-- ====== Header Start ====== -->
@@ -372,7 +367,7 @@
     <!-- ====== FAQ End ====== -->
 
     <!-- ====== Testimonials Start ====== -->
-    <section id="testimonials" class="ud-testimonials">
+    <section id="testimonials" class="ud-testimonials" style="overflow-x:hidden;max-width:100%;">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
