--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-link-btn">
-                    Learn more <i class="lni lni-arrow-right"></i>
+                  <a href="https://wayanadiitm.github.io/ml/news/inviting-article-submissions" rel="nofollow noopener" class="ud-main-btn ud-link-btn">
+                    Call for Blogs <i class="lni lni-arrow-right"></i>
                   </a>
                 </li>
               </ul>
