--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
               <h1 class="ud-hero-title">
-                Let's dive into the awesome ML Journey with
+                Let's dive into the awesome ML Journey with the Wayanad ML series initiative
               </h1>
               <p class="ud-hero-desc">
-                the Wayanad House ML series initiative
+              Curious about Machine Learning but have no idea where to start?
               </p>
               <ul class="ud-hero-buttons">
                 <li>
-                  <a href="" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-white-btn">
+                  <a href="archives" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-white-btn">
                     Get Started
                   </a>
                 </li>
