--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
           </div>
           <div class="ud-about-image">
-            <img src="assets/images/logicloom/1.PNG" alt="about-image" />
+            <img src="https://dataedo-website.s3.amazonaws.com/cartoon/machine_learning.png?1654170935" alt="about-image" />
           </div>
         </div>
       </div>
