--- a/archives.html
+++ b/archives.html
@@ -112,8 +112,19 @@
             <div class="ud-about-content" style="max-width:100%;">
               <span class="tag"><i class="lni lni-tag"></i> Videos</span>
               <h2>LogicLooM</h2>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/G3KeUj40ges?si=iBIfNZThJHvTVjUC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <br>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/G3KeUj40ges?si=FMjbkW9jH38M5pUx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               <h2>ML Challenge</h2>
-              
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/MCmgfA7kQkg?si=6lmiJFiD5CL6ZsTx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <br>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/O0vGP10IhUk?si=HAk9p6SFFScnLjMx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <br>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/_4UxKPnBqLA?si=rCa1OJAyAu07JJrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <br>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/rHPTai225V4?si=g7KTUZqyPDrMwNhj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <br>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/WV48xwXkjKQ?si=0EQxrVqKFPiyYJz7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
           </div>
         </div>
