--- a/archives.html
+++ b/archives.html
@@ -104,7 +104,6 @@
     </section>
     <!-- ====== Hero End ====== -->
 
-    <!-- ====== About Start ====== -->
     <section id="about" class="ud-about">
       <div class="container">
         <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".1s">
@@ -112,7 +111,7 @@
             <div class="ud-about-content" style="max-width:100%;">
               <span class="tag"><i class="lni lni-tag"></i> Videos</span>
               <h2>LogicLooM</h2>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/G3KeUj40ges?si=iBIfNZThJHvTVjUC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qZNhso7FnX8?si=wWNGkFqGlOmNaHs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               <br>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/G3KeUj40ges?si=FMjbkW9jH38M5pUx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               <h2>ML Challenge</h2>
@@ -130,7 +129,6 @@
         </div>
       </div>
     </section>
-    <!-- ====== About End ====== -->
 
     
 
