--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,35 @@
 <link rel="stylesheet" href="/ml/assets/css/ud-styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <style>
+    .ud-about-content {
+    max-width: 100%;
+}
+
+.video-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px; /* Space between videos */
+}
+
+.video-item {
+    background: #f9f9f9; /* Light background for video item */
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.video-item h3 {
+    padding: 10px;
+    font-size: 1.2em;
+    text-align: center;
+}
+
+.video-item iframe {
+    width: 100%;
+    height: 200px; /* Set a fixed height for consistency */
+}
+  </style>
 </head>
   <body>
     <!-- ====== Header Start ====== -->
@@ -110,23 +139,33 @@
           <div class="ud-about-content-wrapper">
             <div class="ud-about-content" style="max-width:100%;">
               <span class="tag"><i class="lni lni-tag"></i> Videos</span>
-              <h2>LogicLooM</h2>
+              <div class="video-grid">
+                        <div class="video-item">
+                            <h3>Video Title 1</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qZNhso7FnX8?si=wWNGkFqGlOmNaHs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              <br>
+               </div>
+               <div class="video-item"><h3>Video Title 2</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/G3KeUj40ges?si=FMjbkW9jH38M5pUx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              <h2>ML Challenge</h2>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/MCmgfA7kQkg?si=6lmiJFiD5CL6ZsTx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              <br>
+              </div>
+                <div class="video-item"><h3>Video Title 2</h3> 
+                 <iframe width="560" height="315" src="https://www.youtube.com/embed/MCmgfA7kQkg?si=6lmiJFiD5CL6ZsTx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+                <div class="video-item"><h3>Video Title 2</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/O0vGP10IhUk?si=HAk9p6SFFScnLjMx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              <br>
+              </div>
+                <div class="video-item"><h3>Video Title 2</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/_4UxKPnBqLA?si=rCa1OJAyAu07JJrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              <br>
+              </div>
+                <div class="video-item"><h3>Video Title 2</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/rHPTai225V4?si=g7KTUZqyPDrMwNhj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              <br>
+              </div>
+                <div class="video-item"><h3>Video Title 2</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/WV48xwXkjKQ?si=0EQxrVqKFPiyYJz7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          </div>
+                </div>
+                </div>
           </div>
         </div>
+      </div>
       </div>
     </section>
 
