--- a/archives.html
+++ b/archives.html
@@ -31,7 +31,7 @@
 
 .video-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(2, 1fr); /* Two columns */
     gap: 20px; /* Space between videos */
 }
 
@@ -51,6 +51,13 @@
 .video-item iframe {
     width: 100%;
     height: 200px; /* Set a fixed height for consistency */
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .video-grid {
+        grid-template-columns: 1fr; /* Single column on smaller screens */
+    }
 }
   </style>
 </head>
@@ -141,25 +148,25 @@
               <span class="tag"><i class="lni lni-tag"></i> Videos</span>
               <div class="video-grid">
                         <div class="video-item">
-                            <h3>Video Title 1</h3>
+                            <h3>Launch of LogicLooM 2.0 by Dr. Jyothi, IIT-GN</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qZNhso7FnX8?si=wWNGkFqGlOmNaHs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                </div>
-               <div class="video-item"><h3>Video Title 2</h3> 
+               <div class="video-item"><h3>Launch of LogicLooM (Margazhi) by Mr. Piyush, IITM</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/G3KeUj40ges?si=FMjbkW9jH38M5pUx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
-                <div class="video-item"><h3>Video Title 2</h3> 
+                <div class="video-item"><h3>PAN-BS AI-ML Challenge Finale (Winner announcement & System Showcase)</h3> 
                  <iframe width="560" height="315" src="https://www.youtube.com/embed/MCmgfA7kQkg?si=6lmiJFiD5CL6ZsTx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
-                <div class="video-item"><h3>Video Title 2</h3> 
+                <div class="video-item"><h3>Comprehensive Approach to the Challenge Problem Statements by Mentors</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/O0vGP10IhUk?si=HAk9p6SFFScnLjMx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
-                <div class="video-item"><h3>Video Title 2</h3> 
+                <div class="video-item"><h3>Orientation Session - ML Challenge 2.0 (Shravan edition)</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/_4UxKPnBqLA?si=rCa1OJAyAu07JJrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
-                <div class="video-item"><h3>Video Title 2</h3> 
+                <div class="video-item"><h3>PAN-BS AI-ML Challenge Orientation (Open Session)</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/rHPTai225V4?si=g7KTUZqyPDrMwNhj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
-                <div class="video-item"><h3>Video Title 2</h3> 
+                <div class="video-item"><h3>ML Challenge 2.0 Model Discussion & presentation</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/WV48xwXkjKQ?si=0EQxrVqKFPiyYJz7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 </div>
