--- a/archives.html
+++ b/archives.html
@@ -148,10 +148,10 @@
               <span class="tag"><i class="lni lni-tag"></i> Videos</span>
               <div class="video-grid">
                         <div class="video-item">
-                            <h3>Launch of LogicLooM 2.0 by Dr. Jyothi, IIT-GN</h3>
+                            <h3>Launch of LogicLooM 2.0 (Paradox'24) by Dr. Jyothi, IIT-GN</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qZNhso7FnX8?si=wWNGkFqGlOmNaHs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                </div>
-               <div class="video-item"><h3>Launch of LogicLooM (Margazhi) by Mr. Piyush, IITM</h3> 
+               <div class="video-item"><h3>Launch of LogicLooM (at Paradox in Margazhi) by Mr. Piyush, IITM</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/G3KeUj40ges?si=FMjbkW9jH38M5pUx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
                 <div class="video-item"><h3>PAN-BS AI-ML Challenge Finale (Winner announcement & System Showcase)</h3> 
