--- a/archives.html
+++ b/archives.html
@@ -161,6 +161,9 @@
                <div class="video-item"><h3>Decoding GenAI Workshop (Clip-2) with Prof. Sudarshan Iyengar, IITR</h3> 
               <iframe width="560" height="315" src="/ml/assets/images/logicloom/"  allowfullscreen></iframe>
               </div>
+                <div class="video-item"><h3>Discussion with Ms. Sasikala B, a LogicLooM participant (venue: ICSR, IITM)</h3> 
+              <iframe width="560" height="315" src="/ml/assets/images/logicloom/"  allowfullscreen></iframe>
+              </div>
                 <div class="video-item"><h3>PAN-BS AI-ML Challenge Finale (Winner announcement & System Showcase)</h3> 
                  <iframe width="560" height="315" src="https://www.youtube.com/embed/MCmgfA7kQkg?si=6lmiJFiD5CL6ZsTx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
