--- a/archives.html
+++ b/archives.html
@@ -156,7 +156,7 @@
               </div>
                 <div class="video-item">
                             <h3>Decoding GenAI Workshop with Prof. Sudarshan Iyengar, IITR</h3>
-                   <iframe width="560" height="315" src="/ml/assets/images/logicloom/" allowfullscreen></iframe>
+                   <iframe width="560" height="315" src="/ml/assets/images/logicloom/DSC_6970.mp4" allowfullscreen></iframe>
                </div>
                <div class="video-item"><h3>Decoding GenAI Workshop (Clip-2) with Prof. Sudarshan Iyengar, IITR</h3> 
               <iframe width="560" height="315" src="/ml/assets/images/logicloom/"  allowfullscreen></iframe>
