--- a/archives.html
+++ b/archives.html
@@ -159,7 +159,7 @@
                    <iframe width="560" height="315" src="/ml/assets/images/logicloom/DSC_6970.mp4" allowfullscreen></iframe>
                </div>
                <div class="video-item"><h3>Decoding GenAI Workshop (Clip-2) with Prof. Sudarshan Iyengar, IITR</h3> 
-              <iframe width="560" height="315" src="/ml/assets/images/logicloom/"  allowfullscreen></iframe>
+              <iframe width="560" height="315" src="/ml/assets/images/logicloom/DSC_6992.mp4"  allowfullscreen></iframe>
               </div>
                 <div class="video-item"><h3>Discussion with Ms. Sasikala B, a LogicLooM participant (venue: ICSR, IITM)</h3> 
               <iframe width="560" height="315" src="/ml/assets/images/logicloom/"  allowfullscreen></iframe>
