--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                   ML Series, Wayanad House
                 </span>
                 <p class="ud-widget-desc">
-                  Description
+                  ML made fun!
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
@@ -915,13 +915,13 @@
                 <h5 class="ud-widget-title">Useful Links</h5>
                 <ul class="ud-widget-links">
                   <li>
-                    <a href="javascript:void(0)">Home</a>
+                    <a href="/ml/">Home</a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)">Archives</a>
+                    <a href="archives">Video Archives</a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)">Gallery</a>
+                    <a href="gallery">Gallery</a>
                   </li>
                 </ul>
               </div>
