--- a/gallery.html
+++ b/gallery.html
@@ -177,9 +177,9 @@
             <div class="ud-about-content" style="max-width:100%;">
               <span class="tag"><i class="lni lni-tag"></i> Photos!</span>
                <div class="gallery">
-                        <img src="/ml/assets/images/logicloom/1.jpg" alt="Photo 1" class="gallery-item">
-                        <img src="/ml/assets/images/logicloom/2.jpg" alt="Photo 2" class="gallery-item">
-                        <img src="/ml/assets/images/logicloom/3.jpg" alt="Photo 3" class="gallery-item">
+                        <img src="/ml/assets/images/logicloom/1.jpg" alt="Photo" class="gallery-item">
+                        <img src="/ml/assets/images/logicloom/2.jpg" alt="Photo" class="gallery-item">
+                        <img src="/ml/assets/images/logicloom/3.jpg" alt="Photo" class="gallery-item">
                     </div>
           </div>
         </div>
@@ -259,13 +259,13 @@
                 <h5 class="ud-widget-title">Useful Links</h5>
                 <ul class="ud-widget-links">
                   <li>
-                    <a href="javascript:void(0)">Home</a>
+                    <a href="/ml/">Home</a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)">Archives</a>
+                    <a href="archives">Video Archives</a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)">Gallery</a>
+                    <a href="gallery">Gallery</a>
                   </li>
                 </ul>
               </div>
