--- a/archives.html
+++ b/archives.html
@@ -249,14 +249,14 @@
               <div class="ud-widget">
                 <h5 class="ud-widget-title">Useful Links</h5>
                 <ul class="ud-widget-links">
-                  <li>
-                    <a href="javascript:void(0)">Home</a>
+                 <li>
+                    <a href="/ml/">Home</a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)">Archives</a>
+                    <a href="archives">Video Archives</a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)">Gallery</a>
+                    <a href="gallery">Gallery</a>
                   </li>
                 </ul>
               </div>
