--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,10 @@
 }
 
 .gallery-item {
-    width: calc(33.333% - 10px); /* 3 images per row */
+    /*width: calc(33.333% - 10px);  3 images per row */
+  width: 50px; /* Set width to 50 pixels */
+    height: 50px; /* Set height to 50 pixels */
+    object-fit: cover; /* Ensure the image covers the area without distortion */
     cursor: pointer;
     transition: transform 0.2s;
 }
